<?xml version="1.0"?>
<package format="3">
  <name>sot-pattern-generator</name>
  <version>3.3.0</version>
  <description>
    jrl-walkgen bindings for dynamic-graph
  </description>
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>
  <license>BSDv2</license>

  <url>http://github.com/stack-of-tasks/sot-talos</url>
  <author>Olivier Stasse</author>
  
  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend>boost</depend>
  <depend>graphviz</depend>
  <depend>dynamic-graph-python</depend>
  <depend>jrl-walkgen</depend>
  <depend>sot-core</depend>

  <doc_depend>doxygen</doc_depend>
  
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
